# tiny_results_v1.0

./: README.md
closed/OctoML/code/: README.md
closed/OctoML/code/microtvm_native/: LICENSE.md
closed/OctoML/systems/: system_description_NRF5340DK_microtvm_cmsis_nn.json  system_description_NUCLEO_L4R5ZI_microtvm_cmsis_nn.json  system_description_NUCLEO_L4R5ZI_microtvm_native.json
closed/STMicroelectronics/results/: README.md
closed/STMicroelectronics/systems/NUCLEO-H7A3ZI-Q/: NUCLEO_H7A3ZI_Q_system_description.json
closed/STMicroelectronics/systems/NUCLEO-U575ZI-Q/: NUCLEO-U575ZI-Q_system_description.json
closed/STMicroelectronics/systems/NUCLEO_L4R5ZI/: NUCLEO_L4R5ZI_system_description.json
closed/greenwaves-technologies/code/: .gitignore  README.md  main.c  submitter_implemented.c
closed/greenwaves-technologies/code/api/: internally_implemented.c  internally_implemented.h
closed/greenwaves-technologies/code/common/: common.mk  model_decl.mk  model_rules.mk
closed/greenwaves-technologies/code/util/: quantization_helpers.h
closed/greenwaves-technologies/systems/: gap9_650_240.json  gap9_800_370.json
closed/plumerai/: README.md
closed/plumerai/code/: README.md  plumerai_model_runner.h
closed/plumerai/code/api/: submitter_implemented.h
closed/plumerai/code/plumerai/: inference_engine.h  tensorflow_compatibility.h
closed/plumerai/systems/: B_U585I_IOT02A.json  DISCO_F746NG.json  NUCLEO_L4R5ZI.json  cy8cproto_062_4343w.json
closed/qualcomm/code/: CMakeLists.txt  README.md  eai.yml
closed/qualcomm/code/anomaly_detection/: CMakeLists.txt  submitter_implemented.cpp
closed/qualcomm/code/anomaly_detection/ad/: ad_model_settings.h
closed/qualcomm/code/anomaly_detection/api/: internally_implemented.cpp  internally_implemented.h  submitter_implemented.h
closed/qualcomm/code/anomaly_detection/eai/: eai_log.h  eai_tiny_api.c  eai_tiny_api.h  platform.c  platform.h
closed/qualcomm/systems/: Next_Generation_Snapdragon_Mobile_Platform_HDK.json
closed/silicon_labs/: readme.md
closed/silicon_labs/code/: build_firmware.sh
closed/silicon_labs/code/anomaly_detection/: mlperf_tiny_ad.slcp  submitter_implemented.cpp
closed/silicon_labs/code/image_classification/: mlperf_tiny_ic.slcp  submitter_implemented.cpp
closed/silicon_labs/code/keyword_spotting/: mlperf_tiny_kws.slcp  submitter_implemented.cpp
closed/silicon_labs/code/person_detection/: mlperf_tiny_vww.slcp  submitter_implemented.cpp
closed/silicon_labs/systems/: silicon_labs_xG24_DK2601B.json
closed/syntiant/code/embedded/src/: perf_dummy.ino  (+2 more)
open/hls4ml/: README.md
open/hls4ml/systems/: system_description_pynq.json
(+776 files in other folders)
